--- a/frontend/src/app/layout/dasboard-layout/dashboard-layout.component.html
+++ b/frontend/src/app/layout/dasboard-layout/dashboard-layout.component.html
@@ -1,11 +1,6 @@
-<div class="min-h-screen flex flex-col">
-  <app-navbar></app-navbar>
-  <div class="flex flex-1">
-    <aside class="hidden lg:block w-64 border-r border-gray-200 bg-white">
-      <app-sidebar></app-sidebar>
-    </aside>
-    <main class="flex-1 p-4 bg-gray-50">
-      <router-outlet></router-outlet>
-    </main>
-  </div>
+<div>
+  <app-sidebar></app-sidebar>
+  <main class="p-4 transition-all duration-300 ease-in-out md:ml-20 lg:ml-64">
+    <router-outlet></router-outlet>
+  </main>
 </div>
